SERVER-63902 Fix $natural hint on time-series collections